--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,11 +10,8 @@
   padding: 40px 40px 40px 0;
   padding-bottom: 90px;
   padding-top: 80px;
-  /* margin: 0 4rem 0 4rem; */
-  min-width: 300px;
+  width: 100%;
 
-  /* margin: 40px; */
-  /* max-height: 200px; */
 }
 
 .gd-carousel-wrapper {
@@ -43,7 +40,9 @@
   }
 }
 
-*{
-    margin: 0;
-    padding: 0;
+@media screen and (max-width: 612px) {
+  .one {
+    text-align: center;
+    /* align-items: center; */
+  }
 }
