--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,79 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: hsl(212.7, 26.8%, 83.9);
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
 .react-multi-carousel-item {
   /* padding: 40px 40px 40px 0; */
   padding: 20px;
@@ -9,7 +82,6 @@
   padding-top: 80px;
   width: 100%;
 }
-
 
 .padding-change {
   padding-top: 20px;
@@ -70,7 +142,6 @@
   }
 }
 
-
 .sidebar {
   background-color: rgb(255, 255, 255);
   display: flex;
@@ -78,16 +149,16 @@
   padding: 4rem 0;
 }
 
-.sidebar>a:first-child {
+.sidebar > a:first-child {
   padding: 0;
 }
 
-.sidebar>a>img {
+.sidebar > a > img {
   width: 10%;
   transition: all 0.5s;
 }
 
-.sidebar>a>img:hover {
+.sidebar > a > img:hover {
   filter: drop-shadow(0 0 10px rgb(250, 45, 175));
 }
 
@@ -104,12 +175,12 @@
   transform: scale(1.1);
 }
 
-.sidebar a>P {
+.sidebar a > P {
   display: flex;
   align-items: center;
 }
 
-.sidebar a>p>svg {
+.sidebar a > p > svg {
   margin-right: 0.5rem;
 }
 
